# duplicate-audio-finder

./: .gitattributes  .gitignore  LICENSE  README.md  README.th.md  pyproject.toml
.github/workflows/: build.yml
src/dupaudio/: __init__.py  __main__.py  models.py  paths.py  workers.py
src/dupaudio/assets/: __init__.py  icon.icns
src/dupaudio/core/: __init__.py  deleter.py  grouper.py  hasher.py  keeprules.py  metadata.py  scanner.py
src/dupaudio/ui/: __init__.py  celebration.py  help_dialog.py  icon.py  main_window.py  models_qt.py  settings_dialog.py  theme.py  widgets.py
tests/: test_core.py
